added edit functionality

--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -12,6 +12,7 @@
         <div class="col card text-dark">
           <strong>Last booking:</strong>
           <app-time-tracking-form fillWithLastBooking="true"
+                                  currentRouteLink="/dashboard"
                                   [projectOptions]="projects"
                                   [currLoggedInUser]="currLoggedInUser"></app-time-tracking-form>
         </div>
