--- a/frontend/src/app/components/project-detail/project-detail.component.html
+++ b/frontend/src/app/components/project-detail/project-detail.component.html
@@ -20,60 +20,16 @@
         </canvas>
       </div>
     </accordion-group>
-    <accordion-group heading="Already booked project times">
-      <div class="card-body text-dark" *ngIf="projectTimes.length === 0">
-        No tracked times available
-      </div>
-      <div class="card-body text-dark" *ngIf="projectTimes.length > 0">
-        <app-time-tracking-list trackingListHeader="Details"
+  </accordion>
+
+  <div *ngIf="projectTimes.length > 0">
+    <app-time-tracking-list trackingListHeader="Details"
                                 [showActionButtons]="false"
+                                [showExportTimesButton]="true"
                                 [currentRouteLink]="currentRouteLink"
                                 [alreadyTrackedTimes]="projectTimes"
+                                [alreadyTrackedTimesPage]="alreadyTrackedTimesPage"
+                                [timeTrackingPerPage]="timeTrackingPerPage"
                                 [projects]="[project]"></app-time-tracking-list>
-        <button class="btn btn-outline-danger" type="button" (click)="generatePDF()">Export Times to PDF</button>
-      </div>
-    </accordion-group>
-  </accordion>
-</div>
-
-<!--
-<div class="container mb-5" role="main">
-  Show project-info
-  <app-project-info [project]="project"
-                    [showFullDetails]="true"
-                    [totalBookedHours]="totalBookedHours"
-                    buttonLinkName="Back"
-                    buttonLink="/project-management"></app-project-info>
-
-  <div class="card bg-light">
-    <div class="card-header pointerCursor"  (click)="toggleBookedProjectTimes()">
-      <strong>Already booked project times: </strong>
-    </div>
-
-    <div class="card-body text-dark" *ngIf="projectTimes.length === 0">
-      No tracked times available
-    </div>
-    <div class="card-body text-dark" *ngIf="projectTimes.length > 0" [hidden]="isBookedProjectTimesHidden">
-      <div>
-        <button class="btn btn-outline-danger" type="button" (click)="generatePDF()">Export Times to PDF</button>
-      </div>
-
-      <canvas baseChart
-                [colors]="chartColors"
-                [data]="chartData"
-                [labels]="chartLabels"
-                chartType="doughnut">
-      </canvas>
-
-
-        <div class="card bg-light">
-          <app-time-tracking-list trackingListHeader="Details"
-                                  [showActionButtons]="false"
-                                  [currentRouteLink]="currentRouteLink"
-                                  [alreadyTrackedTimes]="projectTimes"
-                                  [projects]="[project]"></app-time-tracking-list>
-        </div>
-    </div>
   </div>
 </div>
--->
