--- a/frontend/src/app/components/time-tracking/time-tracking.component.html
+++ b/frontend/src/app/components/time-tracking/time-tracking.component.html
@@ -8,5 +8,7 @@
                           currentRouteLink="/time-tracking/"
                           [showActionButtons]="true"
                           [alreadyTrackedTimes]="alreadyTrackedTimes"
+                          [alreadyTrackedTimesPage]="alreadyTrackedTimesPage"
+                          [timeTrackingPerPage]="timeTrackingPerPage"
                           [projects]="projects"></app-time-tracking-list>
 </div>
