--- a/frontend/src/app/components/project-management/project-management.component.html
+++ b/frontend/src/app/components/project-management/project-management.component.html
@@ -8,10 +8,19 @@
 </div>
 
 <div class="card bg-light">
+
+  <div class="row">
+    <div class="col-xs-12 col-12">
+      <pagination [totalItems]="projects.length"
+                  [itemsPerPage]="projectsPerPage"
+                  (pageChanged)="pageChanged($event)"></pagination>
+    </div>
+  </div>
+
   <div class="card-body">
     <div class="col-md-12">
       <div class="row">
-        <div *ngFor="let project of projects" class="col-4">
+        <div *ngFor="let project of projectsPage" class="col-4">
           <app-project-info [project]="project" buttonLinkName="Details" [buttonLink]="'/project-details/'+ project.id"></app-project-info>
         </div>
       </div>
