--- a/frontend/src/app/components/user-management/user-management.component.html
+++ b/frontend/src/app/components/user-management/user-management.component.html
@@ -7,10 +7,19 @@
 </div>
 
 <div class="card bg-light">
+
+  <div class="row">
+    <div class="col-xs-12 col-12">
+      <pagination [totalItems]="users.length"
+                  [itemsPerPage]="usersPerPage"
+                  (pageChanged)="pageChanged($event)"></pagination>
+    </div>
+  </div>
+
   <div class="card-body">
     <div class="col-md-12">
       <div class="row">
-        <div *ngFor="let user of users" class="col-4">
+        <div *ngFor="let user of usersPage" class="col-4">
 
           <div class="card text-dark">
             <div class="card-header">
@@ -22,7 +31,7 @@
               <strong>Last name:</strong> <em>{{user.lastName}}</em><br>
               <div>
                 <a class="btn btn-outline-success" title="Edit" [routerLink]="'/user-form/' + user.username">Edit</a>
-                <button class="btn btn-outline-warning" type="button" (click)="deleteUser(user)">Delete</button>
+                <button *ngIf="user.username !== currLoggedInUser" class="btn btn-outline-warning" type="button" (click)="deleteUser(user)">Delete</button>
               </div>
             </div>
           </div>
