--- a/frontend/src/app/components/app-navigation/app-navigation.component.html
+++ b/frontend/src/app/components/app-navigation/app-navigation.component.html
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+</head>
+
 <div class="card bg-light top " *ngIf="isLoggedIn">
   <div class="card-body text-dark">
     <div class="container-fluid">
@@ -5,25 +9,40 @@
       <!-- Navigation components -->
       <nav class="navbar navbar-expand-lg navbar-dark justify-content-between">
         <div class="col-1">
-          <a class="navbar-brand brand" [routerLink]="'/dashboard/'">DELOREAN</a>
+          <table>
+            <th style="text-align: center"><img src="../../../assets/images/delorean.svg"></th>
+            <tr><a class="navbar-brand brand" [routerLink]="'/dashboard/'">DELOREAN</a></tr>
+          </table>
         </div>
         <!-- Component links -->
           <div class="navbar-nav" *ngIf="isLoggedInAndAdminRole">
-            <a class="nav-link" [routerLink]="'/user-management/'">User Management</a>
+            <table>
+              <th style="text-align: center"><i class="fas fa-users"></i></th>
+              <tr><a class="nav-link" [routerLink]="'/user-management/'">Users</a></tr>
+            </table>
           </div>
 
           <div class="navbar-nav" *ngIf="isLoggedInAndPrjMgrRole">
-            <a class="nav-link" [routerLink]="'/project-management/'">Project Management</a>
+            <table>
+              <th style="text-align: center"><<i class="fas fa-project-diagram"></i></th>
+              <tr> <a class="nav-link" [routerLink]="'/project-management/'">Projects</a></tr>
+            </table>
+
           </div>
 
           <div class="navbar-nav" *ngIf="isLoggedInAndUserRole">
-            <a class="nav-link" [routerLink]="'/time-tracking/'">Time Tracking</a>
+            <table>
+              <th style="text-align: center"><i class="fas fa-stopwatch"></i></th>
+              <tr><a class="nav-link" [routerLink]="'/time-tracking/'">Time Tracking</a>
+              </tr>
+            </table>
+
           </div>
 
         <!-- Logout and About -->
         <div class="col-2 btn-group-sm">
           <button class="btn btn-outline-info navbar-btn right" type="button" [routerLink]="'/about/'">About</button>
-          <button class="btn btn-outline-danger navbar-btn right" type="button" (click)="logout()">Logout</button>
+          <button class="btn btn-outline-danger navbar-btn right" type="button" (click)="logout()">Logout <i class="fas fa-sign-out-alt"></i></button>
         </div>
       </nav>
     </div>
