--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="col-md-12">
       <div class="row">
-        <h1>WELCOME {{currLoggedInUser}}!</h1>
+        <h1>Welcome {{currLoggedInUser.toUpperCase()}}!</h1>
       </div>
 
       <accordion>
