--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -4,12 +4,12 @@
   <div style="margin: 30% auto">
     <h3> Please Sign in</h3>
     <hr style="color: #ffffff;">
-    <p> Sign n to your account to track your projects working tme</p>
+    <p> Sign to your account to track your project working times</p>
   </div>
 
   <div class="col-md-6" style="margin: 10% auto">
     <div class="card-group ">
-      <div class="card bg-light p-4">
+      <div class="card bg-milch p-4">
         <div class="round" style="margin: 0 auto;">
           <div class="floating ">
             <img class="tossing " src="http://svgur.com/i/im.svg"/>
