--- a/frontend/src/assets/bootstrap/bootstrap.css
+++ b/frontend/src/assets/bootstrap/bootstrap.css
@@ -7033,6 +7033,11 @@ button.bg-danger:focus {
   background-color: #222 !important;
 }
 
+.bg-milch{
+  background: rgba(24, 34, 49, .9);
+}
+
+
 a.bg-light:hover, a.bg-light:focus,
 button.bg-light:hover,
 button.bg-light:focus {
@@ -8577,6 +8582,7 @@ button.bg-dark:focus {
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
+
 
 .shadow-lg {
   -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
