--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -20,7 +20,7 @@
 }
 
 html {
-  background: url("assets/images/login-background.png") no-repeat center center fixed;
+  background: url("assets/images/dl-darker.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
