aussagekräftige commit message

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,10 +1,11 @@
 <html>
 <div class="row justify-content-between test">
 
-  <div style="margin: 30% auto">
-    <h3> Please Sign in</h3>
-    <hr style="color: #ffffff;">
-    <p> Sign n to your account to track your projects working tme</p>
+  <div class="hello">
+    <h3 style="color: black;"> Welcome to Delorean!</h3>
+    <hr>
+    <p class="pL">Hello and welcome!</p>
+    <p class="pL">Please sign-in to your account to track your projects working time!</p>
   </div>
 
   <div class="col-md-6" style="margin: 10% auto">
