--- a/frontend/src/app/components/project-management/project-management.component.html
+++ b/frontend/src/app/components/project-management/project-management.component.html
@@ -1,10 +1,5 @@
-
-<div class="container mb-5" role="main">
-  <div class="card bg-light">
-    <div class="card-body text-dark">
-      <a class="btn btn-outline-info navbar-btn" [routerLink]="'/project-form/'">New project</a>
-    </div>
-  </div>
+<div style="text-align: center;">
+<a class="btn btn-outline-info navbar-btn" [routerLink]="'/project-form/'">New project</a>
 </div>
 
 <div class="card bg-light">
