--- a/frontend/src/app/components/time-tracking-form/time-tracking-form.component.html
+++ b/frontend/src/app/components/time-tracking-form/time-tracking-form.component.html
@@ -1,44 +1,58 @@
-<form [formGroup]="timeTrackingForm" (ngSubmit)="save()" >
+<div class="card bg-light">
   <div class="row">
-    <div class="col">
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input id="username" type="text" name="username" formControlName="username" class="form-control" [value]="currLoggedInUser"/>
-      </div>
-    </div>
-    <div class="col">
-      <label for="trackingDate">Date:</label>
-      <input id="trackingDate" type="text" bsDatepicker name="trackingDate" [bsConfig]="{dateInputFormat: 'DD.MM.YYYY'}"
-             formControlName="trackingDate" class="form-control"/>
-    </div>
-  </div>
+    <div class="col-xs-12 col-12">
+      <div class="card-body" >
+            <form [formGroup]="timeTrackingForm" (ngSubmit)="save()">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input id="username" type="text" name="username" formControlName="username" class="form-control"
+                           [value]="currLoggedInUser"/>
+                  </div>
+                </div>
+                <div class="col">
+                  <label for="trackingDate">Date:</label>
+                  <input id="trackingDate" type="text" bsDatepicker name="trackingDate"
+                         [bsConfig]="{dateInputFormat: 'DD.MM.YYYY'}"
+                         formControlName="trackingDate" class="form-control"/>
+                </div>
+              </div>
 
-  <div class="row">
-    <div class="col">
-      <label for="workedHours">Worked Hours:</label>
-      <input id="workedHours" type="number" min="0.5" max="24" step="0.5" name="workedHours" formControlName="workedHours" class="form-control"/>
-      <div *ngIf="timeTrackingForm.controls.workedHours.invalid && (timeTrackingForm.controls.workedHours.dirty || timeTrackingForm.controls.workedHours.touched)"
-           class="alert alert-danger">
-        <strong>Invalid input!</strong>
-        <div *ngIf="timeTrackingForm.controls.workedHours.errors.min || timeTrackingForm.controls.workedHours.errors.max">
-          Working hours can just between 0,5 and 24h per day!
+              <div class="row">
+                <div class="col">
+                  <label for="workedHours">Worked Hours:</label>
+                  <input id="workedHours" type="number" min="0.5" max="24" step="0.5" name="workedHours"
+                         formControlName="workedHours" class="form-control"/>
+                  <div
+                    *ngIf="timeTrackingForm.controls.workedHours.invalid && (timeTrackingForm.controls.workedHours.dirty || timeTrackingForm.controls.workedHours.touched)"
+                    class="alert alert-danger">
+                    <strong>Invalid input!</strong>
+                    <div
+                      *ngIf="timeTrackingForm.controls.workedHours.errors.min || timeTrackingForm.controls.workedHours.errors.max">
+                      Working hours can just between 0,5 and 24h per day!
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <label for="projectID">Project:</label>
+                  <ngx-select id="projectID" [items]="projectOptions" name="projectID" [multiple]="false"
+                              formControlName="projectID" optionTextField="topic"></ngx-select>
+                </div>
+              </div>
+
+              <div class="btn-group">
+                <div *ngIf="isEditMode == true">
+                  <button type="submit" class="btn btn-primary" [disabled]="timeTrackingForm.invalid">Update</button>
+                  <button type="button" class="btn btn-outline-success " (click)="navigateToLastRoute()">Cancel</button>
+                </div>
+                <div *ngIf="isEditMode == false">
+                  <button type="submit" class="btn btn-primary" [disabled]="timeTrackingForm.invalid">Save</button>
+                </div>
+              </div>
+
+            </form>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="col">
-      <label for="projectID">Project:</label>
-      <ngx-select id="projectID" [items]="projectOptions" name="projectID" [multiple]="false"
-                  formControlName="projectID" optionTextField="topic"></ngx-select>
-    </div>
   </div>
-
-  <div class="btn-group">
-    <div *ngIf="isEditMode == true">
-      <button type="submit" class="btn btn-primary" [disabled]="timeTrackingForm.invalid">Update</button>
-      <button type="button" class="btn btn-outline-success " (click)="navigateToLastRoute()">Cancel</button>
-    </div>
-    <div *ngIf="isEditMode == false">
-      <button type="submit" class="btn btn-primary" [disabled]="timeTrackingForm.invalid">Save</button>
-    </div>
-  </div>
-</form>
+</div>
