--- a/frontend/src/app/components/user-management/user-management.component.html
+++ b/frontend/src/app/components/user-management/user-management.component.html
@@ -1,13 +1,8 @@
-<div class="container mb-5" role="main">
-  <div class="card bg-light">
-    <div class="card-body text-dark">
-        <a class="btn btn-outline-success navbar-btn" [routerLink]="'/user-form/'">New user</a>
-    </div>
-  </div>
+<div style="text-align: center;">
+  <a class="btn btn-outline-success navbar-btn" [routerLink]="'/user-form/'">New user</a>
 </div>
 
 <div class="card bg-light">
-
   <div class="row">
     <div class="col-xs-12 col-12">
       <pagination [totalItems]="users.length"
@@ -31,7 +26,9 @@
               <strong>Last name:</strong> <em>{{user.lastName}}</em><br>
               <div>
                 <a class="btn btn-outline-success" title="Edit" [routerLink]="'/user-form/' + user.username">Edit</a>
-                <button *ngIf="user.username !== currLoggedInUser" class="btn btn-outline-warning" type="button" (click)="deleteUser(user)">Delete</button>
+                <button *ngIf="user.username !== currLoggedInUser" class="btn btn-outline-warning" type="button"
+                        (click)="deleteUser(user)">Delete
+                </button>
               </div>
             </div>
           </div>
