--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -38,3 +38,15 @@ hr {
   color: #333; /* old IE */
   background-color: #333; /* Modern Browsers */
 }
+
+pL{
+  color: black;
+}
+
+.hello{
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 10pt;
+  margin: 25% auto
+
+}
+
