new bg for dashboard

--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-light ">
+<div class="card bg-milch ">
   <div class="card-body">
     <div class="col-md-12">
       <div class="row">
