--- a/frontend/src/app/components/project-info/project-info.component.html
+++ b/frontend/src/app/components/project-info/project-info.component.html
@@ -1,4 +1,4 @@
-<div class="card text-dark">
+<div class="card text-dark bg-milch">
   <div class="card-header">
     <strong>{{project.topic}}</strong>
   </div>
