--- a/frontend/src/app/components/project-management/project-management.component.html
+++ b/frontend/src/app/components/project-management/project-management.component.html
@@ -1,13 +1,13 @@
 
 <div class="container mb-5" role="main">
-  <div class="card bg-light">
+  <div class="card bg-milch">
     <div class="card-body text-dark">
       <a class="btn btn-outline-info navbar-btn" [routerLink]="'/project-form/'">New project</a>
     </div>
   </div>
 </div>
 
-<div class="card bg-light">
+<div class="card bg-milch">
 
   <div class="row">
     <div class="col-xs-12 col-12">
