--- a/frontend/src/app/components/user-management/user-management.component.html
+++ b/frontend/src/app/components/user-management/user-management.component.html
@@ -1,12 +1,12 @@
 <div class="container mb-5" role="main">
-  <div class="card bg-light">
+  <div class="card bg-milch">
     <div class="card-body text-dark">
         <a class="btn btn-outline-success navbar-btn" [routerLink]="'/user-form/'">New user</a>
     </div>
   </div>
 </div>
 
-<div class="card bg-light">
+<div class="card bg-milch">
 
   <div class="row">
     <div class="col-xs-12 col-12">
@@ -21,7 +21,7 @@
       <div class="row">
         <div *ngFor="let user of usersPage" class="col-4">
 
-          <div class="card text-dark">
+          <div class="card text-dark bg-milch">
             <div class="card-header">
               <strong>{{user.username}}</strong>
             </div>
