removed welcome admin ....

--- a/frontend/src/app/components/project-info/project-info.component.html
+++ b/frontend/src/app/components/project-info/project-info.component.html
@@ -3,7 +3,7 @@
     <strong>{{project.topic}}</strong>
   </div>
 
-  <div class="card-body">
+  <div class="card-body bg-milch">
     <div class="row">
       <div class="col">
         <strong>Project manager:</strong>
