--- a/frontend/src/app/components/app-navigation/app-navigation.component.html
+++ b/frontend/src/app/components/app-navigation/app-navigation.component.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 
-<div class="card bg-milch top " *ngIf="isLoggedIn">
+<div class="card bg- top " *ngIf="isLoggedIn">
   <div class="card-body text-dark">
     <div class="container-fluid">
 
@@ -43,6 +43,7 @@
         <div class="col-2 btn-group-sm">
           <button class="btn btn-outline-info navbar-btn right" type="button" [routerLink]="'/about/'">About</button>
           <button class="btn btn-outline-danger navbar-btn right" type="button" (click)="logout()">Logout <i class="fas fa-sign-out-alt"></i></button>
+
         </div>
       </nav>
     </div>
