--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -5,26 +5,25 @@
         <h1>Welcome {{currLoggedInUser.toUpperCase()}}!</h1>
       </div>
 
-      <accordion>
-        <accordion-group heading="Quick booking" isOpen="true">
-          <div *ngIf="hasUserRole == false">
+      <accordion >
+        <accordion-group panelClass="bg-milch"  heading="Quick booking" isOpen="true" >
+          <div *ngIf="hasUserRole == false" >
             No permission to track project times!
           </div>
           <div *ngIf="hasUserRole">
-            <div class="card text-dark">
               <app-time-tracking-form fillWithLastBooking="true"
                                       currentRouteLink="/dashboard"
                                       [projectOptions]="projects"
                                       [currLoggedInUser]="currLoggedInUser"></app-time-tracking-form>
             </div>
-          </div>
-        </accordion-group>
-        <accordion-group heading="Bookings of projects">
-          <div class="card text-dark" *ngIf="hasUserRole">
+
+        </accordion-group  >
+        <accordion-group panelClass="bg-milch"  heading="Bookings of projects">
+          <div class="card bg-milch text-dark" *ngIf="hasUserRole">
             <div *ngIf="chartData.length === 0">
               No tracked times available
             </div>
-            <div *ngIf="chartData.length > 0">
+            <div *ngIf="chartData.length > 0" class="bg-milch">
               <canvas baseChart
                       [datasets]="chartData"
                       [labels]="chartLabels"
