--- a/frontend/src/app/components/time-tracking-form/time-tracking-form.component.html
+++ b/frontend/src/app/components/time-tracking-form/time-tracking-form.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-light">
+<div class="card bg-milch">
   <div class="row">
     <div class="col-xs-12 col-12">
       <div class="card-body" >
