--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,17 @@
+<html class="bg-notag">
+<div class="no-scroll">
+<!--
 <div class="container mb-5 " role="main">
   <app-app-navigation></app-app-navigation>
 </div>
+-->
+<app-app-navigation></app-app-navigation>
+<br><br>
 
 
 <div class="container ">
   <router-outlet></router-outlet>
 </div>
+</div>
 
+</html>
