--- a/frontend/src/app/components/app-navigation/app-navigation.component.html
+++ b/frontend/src/app/components/app-navigation/app-navigation.component.html
@@ -10,8 +10,10 @@
       <nav class="navbar navbar-expand-lg navbar-dark justify-content-between">
         <div class="col-1">
           <table>
+            <a [routerLink]="'/dashboard/'">
             <th style="text-align: center"><img src="../../../assets/images/delorean.svg"></th>
             <tr><a class="navbar-brand brand" [routerLink]="'/dashboard/'">DELOREAN</a></tr>
+            </a>
           </table>
         </div>
         <!-- Component links -->
