--- a/frontend/src/app/components/project-detail/project-detail.component.html
+++ b/frontend/src/app/components/project-detail/project-detail.component.html
@@ -6,8 +6,8 @@
                     buttonLinkName="Back"
                     buttonLink="/project-management"></app-project-info>
 
-  <accordion class="card bg-milch">
-    <accordion-group heading="Overview Diagramm">
+  <accordion class="card ">
+    <accordion-group heading="Overview Diagramm" panelClass="bg-milch">
       <div class="card-body bg-milch text-dark" *ngIf="projectTimes.length === 0">
         No tracked times available
       </div>
