--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
+<div [ngStyle]="background" ]>
+
 <div class="container mb-5 " role="main">
   <app-app-navigation></app-app-navigation>
 </div>
@@ -7,3 +9,4 @@
   <router-outlet></router-outlet>
 </div>
 
+</div>
