--- a/frontend/src/app/components/user-management/user-management.component.html
+++ b/frontend/src/app/components/user-management/user-management.component.html
@@ -2,7 +2,7 @@
   <a class="btn btn-outline-success navbar-btn" [routerLink]="'/user-form/'">New user</a>
 </div>
 
-<div class="card bg-light">
+<div class="card bg-milch">
 
   <div class="row">
     <div class="col-xs-12 col-12">
@@ -22,7 +22,7 @@
               <strong>{{user.username}}</strong>
             </div>
 
-            <div class="card-body">
+            <div class="card-body bg-milch">
               <strong>First name:</strong> <em>{{user.firstName}}</em><br>
               <strong>Last name:</strong> <em>{{user.lastName}}</em><br>
               <div>
