bugfix: do not throw error if not all project information is available. This happens if project is not managed by user. show export button in time tracking as well to allow usere to export their tracked times...

--- a/frontend/src/app/components/time-tracking/time-tracking.component.html
+++ b/frontend/src/app/components/time-tracking/time-tracking.component.html
@@ -10,5 +10,6 @@
                           [alreadyTrackedTimes]="alreadyTrackedTimes"
                           [alreadyTrackedTimesPage]="alreadyTrackedTimesPage"
                           [timeTrackingPerPage]="timeTrackingPerPage"
-                          [projects]="projects"></app-time-tracking-list>
+                          [projects]="projects"
+                          showExportTimesButton="true"></app-time-tracking-list>
 </div>
