--- a/frontend/src/app/components/time-tracking-list/time-tracking-list.component.html
+++ b/frontend/src/app/components/time-tracking-list/time-tracking-list.component.html
@@ -51,7 +51,7 @@
               </tbody>
             </table>
 
-            <button *ngIf="showExportTimesButton" class="btn btn-outline-danger" type="button" (click)="generatePDF()">Export Times to PDF</button>
+            <button *ngIf="showExportTimesButton && alreadyTrackedTimesPage.length > 0" class="btn btn-outline-danger" type="button" (click)="generatePDF()">Export Times to PDF</button>
 
           </div>
         </accordion-group>
