--- a/frontend/src/app/components/time-tracking/time-tracking.component.html
+++ b/frontend/src/app/components/time-tracking/time-tracking.component.html
@@ -3,7 +3,7 @@
                           [projectOptions]="projects"
                           [currLoggedInUser]="currLoggedInUser"></app-time-tracking-form>
 </div>
-<div class="card bg-milch">
+<div>
   <app-time-tracking-list trackingListHeader="Already booked project times"
                           currentRouteLink="/time-tracking/"
                           [showActionButtons]="true"
